Fix image paths in index.html and add .vercelignore for Vercel deployment

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 
     </style>
 
-    <img src="Imagenes/logo.png" alt="DHARCK STORE Logo Background" class="background-logo">
+    <img src="logo.png" alt="DHARCK STORE Logo Background" class="background-logo">
 
     <!-- Header para el título de la aplicación -->
     <header class="app-header">
@@ -502,7 +502,7 @@
             <h1 class="dharck-store-title">
                 DHARCK STORE
             </h1>
-            <img src="Imagenes/logo.png" alt="Logotipo de la TIENDA DHARCK" class="title-logo">    
+            <img src="logo.png" alt="Logotipo de la TIENDA DHARCK" class="title-logo">    
         </div>
     </header>
 
@@ -754,7 +754,7 @@
         // "https://dharck-store-ventas.vercel.app", entonces la URL base de tu API será:
         // "https://dharck-store-ventas.vercel.app/api"
         // Durante el desarrollo local con `vercel dev`, podrías usar 'http://localhost:3000'
-        const BASE_API_URL = 'https://dharckstore-recargas.vercel.app/api'; 
+        const BASE_API_URL = 'https://tudominio.vercel.app/api'; 
 
 
         /**
@@ -864,7 +864,7 @@
                             { name: 'BANCO FALABELLA', details: 'RUT: 17244216-1 / gi553ll30@gmail.com / Cta Corriente: 1-983-036407-8' },
                             { name: 'BANCO ESTADO', details: 'RUT: 17244216-1 / Cta Corriente: 37100135052 / 300 PESOS EXTRAS AL VALOR TOTAL' },
                             { name: 'Titular', details: 'GISSELLE GONZALEZ' },
-                            { name: '¡IMPORTANTE!', d etails: '¡No colocar conceptos EN LOS PAGOS!' },
+                            { name: '¡IMPORTANTE!', details: '¡No colocar conceptos EN LOS PAGOS!' },
                         ]
                     },
                     {
