Fix BASE_API_URL in index.html to match Vercel deployment URL

--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
         // "https://dharck-store-ventas.vercel.app", entonces la URL base de tu API será:
         // "https://dharck-store-ventas.vercel.app/api"
         // Durante el desarrollo local con `vercel dev`, podrías usar 'http://localhost:3000'
-        const BASE_API_URL = 'https://tudominio.vercel.app/api'; 
+        const BASE_API_URL = 'https://dharckstore-recargas.vercel.app/api'; 
 
 
         /**
