--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
         // ¡CAMBIA 'https://tudominio.vercel.app' por el dominio real de tu proyecto en Vercel!
         // Cuando tu proyecto esté desplegado en Vercel, esta será la URL base de tus funciones serverless.
         // Por ejemplo, si tu proyecto se llama "dharck-store-ventas" y se despliega en
-        // "https://dharck-store-ventas.vercel.app", entonces la URL base de tu API será:
+        // "https://dharck-store-ventas.vercel.app", entonces la URL base de tu API seá:
         // "https://dharck-store-ventas.vercel.app/api"
         // Durante el desarrollo local con `vercel dev`, podrías usar 'http://localhost:3000'
         const BASE_API_URL = 'https://dharckstore-recargas.vercel.app/api'; 
