--- a/public/index.html
+++ b/public/index.html
@@ -494,7 +494,7 @@
 
     </style>
 
-    <img src="logo.png" alt="DHARCK STORE Logo Background" class="background-logo">
+    <img src="/logo.png" alt="DHARCK STORE Logo Background" class="background-logo">
 
     <!-- Header para el título de la aplicación -->
     <header class="app-header">
@@ -502,7 +502,7 @@
             <h1 class="dharck-store-title">
                 DHARCK STORE
             </h1>
-            <img src="logo.png" alt="Logotipo de la TIENDA DHARCK" class="title-logo">    
+            <img src="/logo.png" alt="Logotipo de la TIENDA DHARCK" class="title-logo">    
         </div>
     </header>
 
@@ -678,31 +678,31 @@
         // ¡IMPORTANTE! Asegúrate de que tus imágenes de artículos sean optimizadas y de tamaño adecuado (ej. 80x80px comprimidas a WebP o PNG ligero).
         const gameOptions = [
             { name: 'LORDS MOBILE', amounts: [
-                { value: 2.30, label: 'PASE SEMANAL', imageUrl: 'Imagenes/7day.png' },
-                { value: 19.90, label: 'PASE MENSUAL', imageUrl: 'Imagenes/30day.png' },
-                { value: 2.30, label: '209💎', imageUrl: 'Imagenes/prize-2.png' },
-                { value: 5.20, label: '524💎', imageUrl: 'Imagenes/prize-3.png' },
-                { value: 10.00, label: '1048💎', imageUrl: 'Imagenes/prize-4.png' },
-                { value: 19.50, label: '2096💎', imageUrl: 'Imagenes/prize-5.png' },
-                { value: 29.00, label: '3144💎', imageUrl: 'Imagenes/prize-6.png' },
-                { value: 48.00, label: '5240💎', imageUrl: 'Imagenes/prize-6.png' },
-                { value: 62.00, label: '6812💎', imageUrl: 'Imagenes/prize-6.png' },
-                { value: 92.00, label: '9956💎', imageUrl: 'Imagenes/prize-7.png' },
-                { value: 178.00, label: '19912💎', imageUrl: 'Imagenes/prize-7.png' },
-                { value: 270.00, label: '30392💎', imageUrl: 'Imagenes/prize-7.png' },
-                { value: 440.00, label: '50304💎', imageUrl: 'Imagenes/icon-happy.png' },
+                { value: 2.30, label: 'PASE SEMANAL', imageUrl: '/Imagenes/7day.png' },
+                { value: 19.90, label: 'PASE MENSUAL', imageUrl: '/Imagenes/30day.png' },
+                { value: 2.30, label: '209💎', imageUrl: '/Imagenes/prize-2.png' },
+                { value: 5.20, label: '524💎', imageUrl: '/Imagenes/prize-3.png' },
+                { value: 10.00, label: '1048💎', imageUrl: '/Imagenes/prize-4.png' },
+                { value: 19.50, label: '2096💎', imageUrl: '/Imagenes/prize-5.png' },
+                { value: 29.00, label: '3144💎', imageUrl: '/Imagenes/prize-6.png' },
+                { value: 48.00, label: '5240💎', imageUrl: '/Imagenes/prize-6.png' },
+                { value: 62.00, label: '6812💎', imageUrl: '/Imagenes/prize-6.png' },
+                { value: 92.00, label: '9956💎', imageUrl: '/Imagenes/prize-7.png' },
+                { value: 178.00, label: '19912💎', imageUrl: '/Imagenes/prize-7.png' },
+                { value: 270.00, label: '30392💎', imageUrl: '/Imagenes/prize-7.png' },
+                { value: 440.00, label: '50304💎', imageUrl: '/Imagenes/icon-happy.png' },
             ] },
 
             { name: 'BLOOD STRIKE', amounts: [
-                { value: 0.89, label: '100+5🧈', imageUrl: 'Imagenes/100.png' },
-                { value: 2.50, label: '300+20🧈', imageUrl: 'Imagenes/300.png' },
-                { value: 4.30, label: '500+40🧈', imageUrl: 'Imagenes/500.png' },
-                { value: 8.50, label: '1000+100🧈', imageUrl: 'Imagenes/1000.png' },
-                { value: 17.60, label: '2000+200🧈', imageUrl: 'Imagenes/2000.png' },
-                { value: 42.00, label: '5000+800🧈', imageUrl: 'Imagenes/5000.png' },
-                { value: 3.50, label: 'PASE ELITE🧈', imageUrl: 'Imagenes/elite.png' },
-                { value: 8.51, label: 'PASE PREMIUM🧈', imageUrl: 'Imagenes/premium.png' },
-                { value: 2.00, label: 'PASE DE NIVEL🧈', imageUrl: 'Imagenes/mejora.png' },
+                { value: 0.89, label: '100+5🧈', imageUrl: '/Imagenes/100.png' },
+                { value: 2.50, label: '300+20🧈', imageUrl: '/Imagenes/300.png' },
+                { value: 4.30, label: '500+40🧈', imageUrl: '/Imagenes/500.png' },
+                { value: 8.50, label: '1000+100🧈', imageUrl: '/Imagenes/1000.png' },
+                { value: 17.60, label: '2000+200🧈', imageUrl: '/Imagenes/2000.png' },
+                { value: 42.00, label: '5000+800🧈', imageUrl: '/Imagenes/5000.png' },
+                { value: 3.50, label: 'PASE ELITE🧈', imageUrl: '/Imagenes/elite.png' },
+                { value: 8.51, label: 'PASE PREMIUM🧈', imageUrl: '/Imagenes/premium.png' },
+                { value: 2.00, label: 'PASE DE NIVEL🧈', imageUrl: '/Imagenes/mejora.png' },
             ] },
 
             // Puedes añadir más juegos aquí
@@ -751,7 +751,7 @@
         // ¡CAMBIA 'https://tudominio.vercel.app' por el dominio real de tu proyecto en Vercel!
         // Cuando tu proyecto esté desplegado en Vercel, esta será la URL base de tus funciones serverless.
         // Por ejemplo, si tu proyecto se llama "dharck-store-ventas" y se despliega en
-        // "https://dharck-store-ventas.vercel.app", entonces la URL base de tu API seá:
+        // "https://dharck-store-ventas.vercel.app", entonces la URL base de tu API será:
         // "https://dharck-store-ventas.vercel.app/api"
         // Durante el desarrollo local con `vercel dev`, podrías usar 'http://localhost:3000'
         const BASE_API_URL = 'https://dharckstore-recargas.vercel.app/api'; 
