--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RECARGAR BLOOD STRIKE</title>
+    <title>RECARGAS DHARCK STORE</title>
     <link rel="icon" href="/Imagenes/logo1.png" type="image/png">
 </head>
 <body>
