Reverting to simple static site: Removed backend, hardcoded data, simplified vercel.json

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RECARGAR BLOOD STRIKE</title>
+    <title>RECARGAS DHARCK STORE</title>
     <link rel="icon" href="/Imagenes/logo1.png" type="image/png">
 </head>
 <body>
@@ -781,7 +781,7 @@
                     {
                         name: 'VENEZUELA',
                         code: 'VES',
-                        exchangeRate: 137,
+                        exchangeRate: 138,
                         symbol: 'Bs.',
                         paymentMethods: [
                             { name: 'Pago Móvil', details: 'C.I.: V-32147818, Teléfono: 04126027407, Banco: 0105 (Banco Mercantil)' },
@@ -835,7 +835,7 @@
                     {
                         name: 'ARGENTINA',
                         code: 'ARS',
-                        exchangeRate: 1260,
+                        exchangeRate: 1270,
                         symbol: '$',
                         paymentMethods: [
                             { name: 'Mercado pago', details: '0000003100069089540216' },
