Added .vercelignore to ensure static HTML deployment

--- a/public/index.html
+++ b/public/index.html
@@ -714,8 +714,8 @@
                 { value: 2.00, label: 'PASE DE NIVEL🧈', imageUrl: '/Imagenes/mejora.png' },
             ] },
              { name: 'FREE FIRE', amounts: [
-                { value: 1.80, label: '💎SEMANAL', imageUrl: '/Imagenes/FFSEMANAL.png' },
-                { value: 8.50, label: '💎MENSUAL', imageUrl: '/Imagenes/FFMENSUAL.png' },
+                { value: 1.80, label: '💎SEMANAL', imageUrl: '/Imagenes/ffsemanal.png' },
+                { value: 8.50, label: '💎MENSUAL', imageUrl: '/Imagenes/ffmensual.png' },
                 { value: 0.99, label: '💎100+10', imageUrl: '/Imagenes/prize-2.png' },
                 { value: 1.90, label: '💎200+20', imageUrl: '/Imagenes/prize-3.png' },
                 { value: 2.80, label: '💎310+31', imageUrl: '/Imagenes/prize-4.png' },
