Added .vercelignore to ensure static HTML deployment

--- a/public/index.html
+++ b/public/index.html
@@ -719,8 +719,8 @@
                 { value: 2.00, label: 'PASE DE NIVEL🧈', imageUrl: '/image/mejora.png' },
             ] },
              { name: 'FREE FIRE', amounts: [
-                { value: 1.80, label: '💎SEMANAL', imageUrl: '/image/ffsemanal.png' },
-                { value: 8.50, label: '💎MENSUAL', imageUrl: '/image/ffmensual.png' },
+                { value: 1.80, label: '💎SEMANAL', imageUrl: '/image/ffs.png' },
+                { value: 8.50, label: '💎MENSUAL', imageUrl: '/image/ffm.png' },
                 { value: 0.99, label: '💎100+10', imageUrl: '/image/prize-2.png' },
                 { value: 1.90, label: '💎200+20', imageUrl: '/image/prize-3.png' },
                 { value: 2.80, label: '💎310+31', imageUrl: '/image/prize-4.png' },
