Added .vercelignore to ensure static HTML deployment

--- a/public/index.html
+++ b/public/index.html
@@ -697,15 +697,15 @@
                 { value: 270.00, label: '30392💎', imageUrl: '/image/prize-7.png' },
                 { value: 440.00, label: '50304💎', imageUrl: '/image/icon-happy.png' },
             ] },
-            { name: 'LORDS MOBILE PROMOCION', amounts: [
-                { value: 5.20, label: '💎499+', imageUrl: '/image/prize-2.png' },
-                { value: 12.00, label: '💎999+', imageUrl: '/image/prize-3.png' },
-                { value: 20.00, label: '💎1999+', imageUrl: '/image/prize-4.png' },
-                { value: 25.50, label: '💎2499+', imageUrl: '/image/prize-5.png' },
-                { value: 30.00, label: '💎2999+', imageUrl: '/image/prize-6.png' },
-                { value: 48.50, label: '💎4999+', imageUrl: '/image/prize-7.png' },
-                { value: 95.00, label: '💎9999+', imageUrl: '/image/icon-happy.png' },
-            ] },
+//            { name: 'LORDS MOBILE PROMOCION', amounts: [
+//                { value: 5.20, label: '💎499+', imageUrl: '/image/prize-2.png' },
+//                { value: 12.00, label: '💎999+', imageUrl: '/image/prize-3.png' },
+//                { value: 20.00, label: '💎1999+', imageUrl: '/image/prize-4.png' },
+//                { value: 25.50, label: '💎2499+', imageUrl: '/image/prize-5.png' },
+//                { value: 30.00, label: '💎2999+', imageUrl: '/image/prize-6.png' },
+//                { value: 48.50, label: '💎4999+', imageUrl: '/image/prize-7.png' },
+//                { value: 95.00, label: '💎9999+', imageUrl: '/image/icon-happy.png' },
+//            ] },
             
             { name: 'BLOOD STRIKE', amounts: [
                 { value: 0.89, label: '100+5🧈', imageUrl: '/image/100.png' },
@@ -730,6 +730,16 @@
                 { value: 40.00, label: '💎5600+560', imageUrl: '/image/prize-7.png' },
             ] },
 
+            { name: 'GENSHIN IMPACT', amounts: [
+                { value: 4.8, label: 'PASE LUNAR', imageUrl: '/image/bl.png' },
+                { value: 0.90, label: '60', imageUrl: '/image/cg1.png' },
+                { value: 4.70, label: '300+30', imageUrl: '/image/cg2.png' },
+                { value: 13.00, label: '980+110', imageUrl: '/image/cg3.png' },
+                { value: 27.00, label: '1980+260', imageUrl: '/image/cg4.png' },
+                { value: 45.50, label: '3280+600', imageUrl: '/image/cg5.png' },
+                { value: 90.00, label: '6480+1600', imageUrl: '/image/cg6.png' },
+            ] },
+
 
             // Puedes añadir más juegos aquí
         ];
@@ -739,7 +749,7 @@
             {
                 name: 'VENEZUELA',
                 code: 'VES',
-                exchangeRate: 144, // Tasa de cambio directa
+                exchangeRate: 141, // Tasa de cambio directa
                 symbol: 'Bs.',
                 paymentMethods: [
                     { name: 'Pago Móvil', details: 'C.I.: V-32147818, Teléfono: 04126027407, Banco: 0105 (Banco Mercantil)' },
