Added .vercelignore to ensure static HTML deployment

--- a/public/index.html
+++ b/public/index.html
@@ -704,7 +704,7 @@
 //                { value: 25.50, label: '💎2499+', imageUrl: '/image/prize-5.png' },
 //                { value: 30.00, label: '💎2999+', imageUrl: '/image/prize-6.png' },
 //                { value: 48.50, label: '💎4999+', imageUrl: '/image/prize-7.png' },
-//                { value: 95.00, label: '💎9999+', imageUrl: '/image/icon-happy.png' },
+//                { value: 94.00, label: '💎9999+', imageUrl: '/image/icon-happy.png' },
 //            ] },
             
             { name: 'BLOOD STRIKE', amounts: [
@@ -740,7 +740,14 @@
                 { value: 90.00, label: '6480+1600', imageUrl: '/image/cg6.png' },
             ] },
 
-
+            { name: 'PUBG MOBILE', amounts: [
+                { value: 0.89, label: '60', imageUrl: '/image/pm.png' },
+                { value: 2.50, label: '300+25', imageUrl: '/image/pm.png' },
+                { value: 4.30, label: '600+60', imageUrl: '/image/pm.png' },
+                { value: 8.50, label: '1500+300', imageUrl: '/image/pm.png' },
+                { value: 17.60, label: '3000+850', imageUrl: '/image/pm.png' },
+                { value: 42.00, label: '6000+2100', imageUrl: '/image/pm.png' },
+            ] },
             // Puedes añadir más juegos aquí
         ];
 
