Added .vercelignore to ensure static HTML deployment

--- a/public/index.html
+++ b/public/index.html
@@ -752,7 +752,7 @@
              { name: 'DELTA FORCE STEAM', amounts: [
                 { value: 0.99, label: '60 Coins', imageUrl: '/image/dfs1.png' },
                 { value: 4.70, label: '300+20 Coins', imageUrl: '/image/dfs1.png' },
-                { value: 6.80, label: '420+40 Coins', imageUrl: '/image/pdfs2.png' },
+                { value: 6.80, label: '420+40 Coins', imageUrl: '/image/dfs2.png' },
                 { value: 9.00, label: '680+70 Coins', imageUrl: '/image/dfs2.png' },
                 { value: 17.00, label: '1280+200 Coins', imageUrl: '/image/dfs3.png' },
                 { value: 21.00, label: '1680+300 Coins', imageUrl: '/image/dfs3.png' },
