Added .vercelignore to ensure static HTML deployment

--- a/public/index.html
+++ b/public/index.html
@@ -761,6 +761,30 @@
                 { value: 174.00, label: '12960+3240 Coins', imageUrl: '/image/dfs5.png' },
                 { value: 260.00, label: '19440+4860 Coins', imageUrl: '/image/dfs5.png' },
                      ] },
+
+         { name: 'DELTA FORCE GARENA', amounts: [
+                { value: 0.99, label: '60 Coins', imageUrl: '/image/dfs1.png' },
+                { value: 4.80, label: '300+36 Coins', imageUrl: '/image/dfs1.png' },
+                { value: 7.00, label: '420+62 Coins', imageUrl: '/image/dfs2.png' },
+                { value: 9.60, label: '680+105 Coins', imageUrl: '/image/dfs2.png' },
+                { value: 19.00, label: '1280+264 Coins', imageUrl: '/image/dfs3.png' },
+                { value: 23.50, label: '1680+385 Coins', imageUrl: '/image/dfs3.png' },
+                { value: 45.00, label: '3280+834 Coins', imageUrl: '/image/dfs4.png' },
+                { value: 88.00, label: '6480+1944 Coins', imageUrl: '/image/dfs4.png' },
+                { value: 180.00, label: '12960+3888 Coins', imageUrl: '/image/dfs5.png' },
+                { value: 270.00, label: '19440+5832 Coins', imageUrl: '/image/dfs5.png' },
+                     ] },
+
+            { name: 'CALL OF DUTY MOBILE', amounts: [
+                { value: 1.50, label: '80 CP', imageUrl: '/image/cm1.png' },
+                { value: 5.50, label: '420 CP', imageUrl: '/image/cm2.png' },
+                { value: 11.00, label: '880 CP', imageUrl: '/image/cm3.png' },
+                { value: 26.00, label: '2400 CP', imageUrl: '/image/cm3.png' },
+                { value: 55.00, label: '5000 CP', imageUrl: '/image/cm4.png' },
+                { value: 110.00, label: '10800 CP', imageUrl: '/image/cm4.png' },
+                     ] },
+
+
             // Puedes añadir más juegos aquí
         ];
 
