Added .vercelignore to ensure static HTML deployment

--- a/public/index.html
+++ b/public/index.html
@@ -875,9 +875,9 @@
                 symbol: '$',
                 paymentMethods: [
                     { name: 'BANCO FALABELLA', details: 'RUT: 17244216-1 / gi553ll30@gmail.com / Cta Corriente: 1-983-036407-8' },
-                    { name: 'BANCO ESTADO', "details": 'RUT: 17244216-1 / Cta Corriente: 37100135052 / 300 PESOS EXTRAS AL VALOR TOTAL'},
-                    { name: 'Titular', "details": 'GISSELLE GONZALEZ'},
-                    { name: '¡IMPORTANTE!', "details": '¡No colocar conceptos EN LOS PAGOS!'},
+                    { name: 'BANCO ESTADO', details: 'RUT: 17244216-1 / Cta Corriente: 37100135052 / 300 PESOS EXTRAS AL VALOR TOTAL'},
+                    { name: 'Titular', details: 'GISSELLE GONZALEZ'},
+                    { name: '¡IMPORTANTE!', details: '¡No colocar conceptos EN LOS PAGOS!'},
                 ]
             },
             {
