Added .vercelignore to ensure static HTML deployment

--- a/public/index.html
+++ b/public/index.html
@@ -949,7 +949,7 @@
         // existan en tu carpeta 'public/image/' en Vercel y que estén optimizadas (comprimidas)
         // para una carga rápida de la página.
         const gameOptions = [
-            { name: 'LORDS MOBILE', logoUrl: '/image/lords_mobile_logo.png', inputRequirement: 'id_name', amounts: [
+            { name: 'LORDS MOBILE', logoUrl: '/image/lm1.png', inputRequirement: 'id_name', amounts: [
                 { value: 2.30, label: 'PASE SEMANAL', imageUrl: '/image/7day.png' },
                 { value: 19.90, label: 'PASE MENSUAL', imageUrl: '/image/30day.png' },
                 { value: 2.30, label: '209💎', imageUrl: '/image/prize-2.png' },
