Added .vercelignore to ensure static HTML deployment

--- a/public/index.html
+++ b/public/index.html
@@ -964,7 +964,7 @@
                 { value: 270.00, label: '30392💎', imageUrl: '/image/prize-7.png' },
                 { value: 440.00, label: '50304💎', imageUrl: '/image/icon-happy.png' },
             ] },
-            { name: 'LORDS MOBILE PROMOCION', logoUrl: '/image/lords_mobile_promo_logo.png', inputRequirement: 'id_name', amounts: [
+            { name: 'LORDS MOBILE PROMOCION', logoUrl: '/image/lm2.png', inputRequirement: 'id_name', amounts: [
                 { value: 5.20, label: '💎499+', imageUrl: '/image/prize-2.png' },
                 { value: 12.00, label: '💎999+', imageUrl: '/image/prize-3.png' },
                 { value: 20.00, label: '💎1999+', imageUrl: '/image/prize-4.png' },
