Added .vercelignore to ensure static HTML deployment

--- a/public/index.html
+++ b/public/index.html
@@ -973,7 +973,7 @@
                 { value: 48.50, label: '💎4999+', imageUrl: '/image/prize-7.png' },
                 { value: 95.00, label: '💎9999+', imageUrl: '/image/icon-happy.png' },
             ] },
-            { name: 'BLOOD STRIKE', logoUrl: '/image/blood_strike_logo.png', inputRequirement: 'id_only', amounts: [
+            { name: 'BLOOD STRIKE', logoUrl: '/image/bs.png', inputRequirement: 'id_only', amounts: [
                 { value: 0.89, label: '100+5🧈', imageUrl: '/image/100.png' },
                 { value: 2.50, label: '300+20🧈', imageUrl: '/image/300.png' },
                 { value: 4.30, label: '500+40🧈', imageUrl: '/image/500.png' },
@@ -984,7 +984,7 @@
                 { value: 8.51, label: 'PASE PREMIUM🧈', imageUrl: '/image/premium.png' },
                 { value: 2.00, label: 'PASE DE NIVEL🧈', imageUrl: '/image/mejora.png' },
             ] },
-            { name: 'FREE FIRE', logoUrl: '/image/free_fire_logo.png', inputRequirement: 'id_name', amounts: [
+            { name: 'FREE FIRE', logoUrl: '/image/ff1.png', inputRequirement: 'id_name', amounts: [
                 { value: 1.80, label: '💎SEMANAL', imageUrl: '/image/ffs.png' },
                 { value: 8.50, label: '💎MENSUAL', imageUrl: '/image/ffm.png' },
                 { value: 0.99, label: '💎100+10', imageUrl: '/image/prize-2.png' },
@@ -995,7 +995,7 @@
                 { value: 18.00, label: '💎2180+218', imageUrl: '/image/prize-7.png' },
                 { value: 40.00, label: '💎5600+560', imageUrl: '/image/prize-7.png' },
             ] },
-            { name: 'GENSHIN IMPACT', logoUrl: '/image/genshin_impact_logo.png', inputRequirement: 'id_server', amounts: [
+            { name: 'GENSHIN IMPACT', logoUrl: '/image/gi.png', inputRequirement: 'id_server', amounts: [
                 { value: 4.8, label: 'PASE LUNAR', imageUrl: '/image/bl.png' },
                 { value: 0.90, label: '60', imageUrl: '/image/cg1.png' },
                 { value: 4.70, label: '300+30', imageUrl: '/image/cg2.png' },
@@ -1004,7 +1004,7 @@
                 { value: 45.50, label: '3280+600', imageUrl: '/image/cg5.png' },
                 { value: 90.00, label: '6480+1600', imageUrl: '/image/cg6.png' },
             ] },
-            { name: 'PUBG MOBILE', logoUrl: '/image/pubg_mobile_logo.png', inputRequirement: 'id_only', amounts: [
+            { name: 'PUBG MOBILE', logoUrl: '/image/pm1.png', inputRequirement: 'id_only', amounts: [
                 { value: 0.99, label: '60', imageUrl: '/image/pm.png' },
                 { value: 4.85, label: '300+25', imageUrl: '/image/pm.png' },
                 { value: 9.00, label: '600+60', imageUrl: '/image/pm.png' },
@@ -1012,7 +1012,7 @@
                 { value: 45.00, label: '3000+850', imageUrl: '/image/pm.png' },
                 { value: 92.00, label: '6000+2100', imageUrl: '/image/pm.png' },
             ] },
-            { name: 'DELTA FORCE STEAM', logoUrl: '/image/delta_force_steam_logo.png', inputRequirement: 'id_only', amounts: [
+            { name: 'DELTA FORCE STEAM', logoUrl: '/image/dfss.png', inputRequirement: 'id_only', amounts: [
                 { value: 0.99, label: '60 Coins', imageUrl: '/image/dfs1.png' },
                 { value: 4.70, label: '300+20 Coins', imageUrl: '/image/dfs1.png' },
                 { value: 6.80, label: '420+40 Coins', imageUrl: '/image/dfs2.png' },
@@ -1024,7 +1024,7 @@
                 { value: 174.00, label: '12960+3240 Coins', imageUrl: '/image/dfs5.png' },
                 { value: 260.00, label: '19440+4860 Coins', imageUrl: '/image/dfs5.png' },
             ] },
-            { name: 'DELTA FORCE GARENA', logoUrl: '/image/delta_force_garena_logo.png', inputRequirement: 'id_only', amounts: [
+            { name: 'DELTA FORCE GARENA', logoUrl: '/image/dfsg.png', inputRequirement: 'id_only', amounts: [
                 { value: 0.99, label: '60 Coins', imageUrl: '/image/dfs1.png' },
                 { value: 4.80, label: '300+36 Coins', imageUrl: '/image/dfs1.png' },
                 { value: 7.00, label: '420+62 Coins', imageUrl: '/image/dfs2.png' },
@@ -1036,7 +1036,7 @@
                 { value: 180.00, label: '12960+3888 Coins', imageUrl: '/image/dfs5.png' },
                 { value: 270.00, label: '19440+5832 Coins', imageUrl: '/image/dfs5.png' },
             ] },
-            { name: 'CALL OF DUTY MOBILE', logoUrl: '/image/cod_mobile_logo.png', inputRequirement: 'cod_full', amounts: [
+            { name: 'CALL OF DUTY MOBILE', logoUrl: '/image/codm.png', inputRequirement: 'cod_full', amounts: [
                 { value: 1.50, label: '80 CP', imageUrl: '/image/cm1.png' },
                 { value: 5.50, label: '420 CP', imageUrl: '/image/cm1.png' },
                 { value: 11.00, label: '880 CP', imageUrl: '/image/cm2.png' },
@@ -1044,7 +1044,7 @@
                 { value: 55.00, label: '5000 CP', imageUrl: '/image/cm4.png' },
                 { value: 110.00, label: '10800 CP', imageUrl: '/image/cm4.png' },
             ] },
-            { name: 'MOBILE LEGENDS', logoUrl: '/image/mobile_legends_logo.png', inputRequirement: 'id_server_name', amounts: [
+            { name: 'MOBILE LEGENDS', logoUrl: '/image/ml.png', inputRequirement: 'id_server_name', amounts: [
                 { value: 0.89, label: '50💎', imageUrl: '/image/ml_50.png' },
                 { value: 2.50, label: '100💎', imageUrl: '/image/ml_100.png' },
                 { value: 4.30, label: '150💎', imageUrl: '/image/ml_150.png' },
