Added .vercelignore to ensure static HTML deployment

--- a/public/index.html
+++ b/public/index.html
@@ -1174,11 +1174,24 @@
             { 
                 name: 'BOLIVIA',
                 code: 'BOB',
-                exchangeRate: 16.9,
+                exchangeRate: 16.7,
                 symbol: 'Bs.', 
                 paymentMethods: [
-                    { name: 'SIMPE', details: '63223852' }, 
-                    { name: 'Titular', details: 'Solange Granja Duarte'}, 
+                    { name: 'Banco ganadero', details: '1311307078' }, 
+                    { name: 'Tigo Money', details: '69172559' }, 
+                    { name: 'Titular', details: 'Brandon Salazar Gutiérrez'}, 
+                    { name: '¡IMPORTANTE!', details: '¡No colocar conceptos EN LOS PAGOS!' },
+                ]
+            },
+            { 
+                name: 'NICARAGUA',
+                code: 'NIO',
+                exchangeRate: 43,
+                symbol: 'C$', 
+                paymentMethods: [
+                    { name: 'BAC CÓRDOBAS', details: 'Email: Nomiflores72@gmail.com' }, 
+                    { name: 'Cta. ahorros:', details: '363278672' }, 
+                    { name: 'Titular', details: 'Nahomi Flores Velásquez'}, 
                     { name: '¡IMPORTANTE!', details: '¡No colocar conceptos EN LOS PAGOS!' },
                 ]
             },
