Added .vercelignore to ensure static HTML deployment

--- a/public/index.html
+++ b/public/index.html
@@ -1253,7 +1253,7 @@
                 code: 'VES',
                 exchangeRate: 142, // Tasa de cambio directa
                 symbol: 'Bs.',
-                imageUrl: '/image/paises/VE.png', // Ruta actualizada
+                imageUrl: '/image/paises/ve.png', // Ruta actualizada
                 paymentMethods: [
                     { name: 'Pago Móvil', details: 'C.I.: V-32147818, Teléfono: 04126027407, Banco: 0105 (Banco Mercantil)' },
                     { name: '¡IMPORTANTE!', details: '¡No colocar conceptos EN LOS PAGOS!' },
