Added .vercelignore to ensure static HTML deployment

--- a/public/index.html
+++ b/public/index.html
@@ -1264,7 +1264,7 @@
                 code: 'COP',
                 exchangeRate: 4300,
                 symbol: 'COP',
-                imageUrl: '/image/paises/CO.png', // Ruta actualizada
+                imageUrl: '/image/paises/co.png', // Ruta actualizada
                 paymentMethods: [
                     { name: 'Nequi', details: 'Número: 3012660676 Nombre:Ali.' },
                     { name: '¡IMPORTANTE!', details: '¡No colocar conceptos EN LOS PAGOS!' },
@@ -1275,7 +1275,7 @@
                 code: 'PEN',
                 exchangeRate: 3.9,
                 symbol: 'S/.',
-                imageUrl: '/image/paises/PE.png', // Ruta actualizada
+                imageUrl: '/image/paises/pe.png', // Ruta actualizada
                 paymentMethods: [
                     { name: 'BCP', details: 'Cuenta: 38097062947042, Titular: Yoshimara' },
                     { name: 'Yape', details: 'Número: 974610375' },
@@ -1287,7 +1287,7 @@
                 code: 'MXN',
                 exchangeRate: 20.1,
                 symbol: 'MXN',
-                imageUrl: '/image/paises/MX.png', // Ruta actualizada
+                imageUrl: '/image/paises/mx.png', // Ruta actualizada
                 paymentMethods: [
                     { name: 'SPIN BY OXXO', details: 'TARJETA: 4217 4701 8364 0099' },
                     { name: 'BANCO AZTECA', details: 'INTERBANCARIA: 1277 9700 1467 5859 00' },
@@ -1300,7 +1300,7 @@
                 code: 'USD',
                 exchangeRate: 1.05, 
                 symbol: '$',
-                imageUrl: '/image/paises/US.png', // Ruta actualizada
+                imageUrl: '/image/paises/us.png', // Ruta actualizada
                 paymentMethods: [
                     { name: 'Zelle', details: '+1 (661) 736 - 0564, Nombre: Jannett Martinez Lopez' },
                     { name: 'Titular', details: 'Jannett Martinez Lopez' },
@@ -1312,7 +1312,7 @@
                 code: 'ARS',
                 exchangeRate: 1270,
                 symbol: '$',
-                imageUrl: '/image/paises/AR.png', // Ruta actualizada
+                imageUrl: '/image/paises/ar.png', // Ruta actualizada
                 paymentMethods: [
                     { name: 'Mercado pago', details: '0000003100069089540216' },
                     { name: 'UALA', details: '3840200500000000199867' },
@@ -1325,7 +1325,7 @@
                 code: 'USD',
                 exchangeRate: 1.06,
                 symbol: '$',
-                imageUrl: '/image/paises/EC.png', // Ruta actualizada
+                imageUrl: '/image/paises/ec.png', // Ruta actualizada
                 paymentMethods: [
                     { name: 'Banco Pichincha', details: 'Cta. ahorros 2204277346' },
                     { name: 'Banco de Guayaquil', details: 'Cta. ahorros 0039924590' },
@@ -1338,7 +1338,7 @@
                 code: 'CLP',
                 exchangeRate: 1010,
                 symbol: '$',
-                imageUrl: '/image/paises/CL.png', // Ruta actualizada
+                imageUrl: '/image/paises/cl.png', // Ruta actualizada
                 paymentMethods: [
                     { name: 'BANCO FALABELLA', details: 'RUT: 17244216-1 / gi553ll30@gmail.com / Cta Corriente: 1-983-036407-8' },
                     { name: 'BANCO ESTADO', "details": 'RUT: 17244216-1 / Cta Corriente: 37100135052 / 300 PESOS EXTRAS AL VALOR TOTAL'},
@@ -1351,7 +1351,7 @@
                 code: 'EUR',
                 exchangeRate: 1.03,
                 symbol: '€',
-                imageUrl: '/image/paises/ES.png', // Ruta actualizada
+                imageUrl: '/image/paises/es.png', // Ruta actualizada
                 paymentMethods: [
                     { name: 'BIZUM', details: '612237372 / 614153840 / CUALQUIERA DE LOS DOS' },
                     { name: 'BANCO SANTANDER', details: 'Cuenta bancaria : ES0800495939582916425258' },
@@ -1364,7 +1364,7 @@
                 code: 'CRC',
                 exchangeRate: 600,
                 symbol: '₡',
-                imageUrl: '/image/paises/CR.png', // Ruta actualizada
+                imageUrl: '/image/paises/cr.png', // Ruta actualizada
                 paymentMethods: [
                     { name: 'SIMPE', details: '63223852' },
                     { name: 'Titular', details: 'Solange Granja Duarte' },
@@ -1376,7 +1376,7 @@
                 code: 'BOB',
                 exchangeRate: 16.7,
                 symbol: 'Bs.', 
-                imageUrl: '/image/paises/BO.png', // Ruta actualizada
+                imageUrl: '/image/paises/bo.png', // Ruta actualizada
                 paymentMethods: [
                     { name: 'Banco ganadero', details: '1311307078' }, 
                     { name: 'Tigo Money', details: '69172559' }, 
@@ -1389,7 +1389,7 @@
                 code: 'NIO',
                 exchangeRate: 43,
                 symbol: 'C$', 
-                imageUrl: '/image/paises/NI.png', // Ruta actualizada
+                imageUrl: '/image/paises/ni.png', // Ruta actualizada
                 paymentMethods: [
                     { name: 'BAC CÓRDOBAS', details: 'Email: Nomiflores72@gmail.com' }, 
                     { name: 'Cta. ahorros:', details: '363278672' }, 
