Added .vercelignore to ensure static HTML deployment

--- a/public/index.html
+++ b/public/index.html
@@ -1407,7 +1407,7 @@
             { name: 'XJoseDharckX', phoneNumber: '584126027407', imageUrl: '/image/vendedores/xjosedharckx.png' }, // Ruta actualizada
             { name: 'Miguel', phoneNumber: '5214951219766', imageUrl: '/image/vendedores/miguel.png' }, // Ruta actualizada
             { name: 'Alfredo Favier', phoneNumber: '5353148505', imageUrl: '/image/vendedores/alfredo_favier.png' }, // Ruta actualizada
-            { name: 'Candy Candy', phoneNumber: '584144274483', imageUrl: '/image/vendedores/candy_candy.png' }, // Ruta actualizada
+            { name: 'Candy Candy', phoneNumber: '584144274483', imageUrl: '/image/vendedores/david.png' }, // Ruta actualizada
             { name: 'Satoru', phoneNumber: '5491170897494', imageUrl: '/image/vendedores/satoru.png' }, // Ruta actualizada
             { name: 'Ernesto', phoneNumber: '573025129990', imageUrl: '/image/vendedores/ernesto.png' }, // Ruta actualizada
             { name: 'OSCAR', phoneNumber: '573002030533', imageUrl: '/image/vendedores/oscar.png' }, // Ruta actualizada
