--- a/public/index.html
+++ b/public/index.html
@@ -1155,13 +1155,13 @@
                 { value: 440.00, label: '50304💎', imageUrl: '/image/icon-happy.png' },
             ] },
             { name: 'LORDS MOBILE PROMOCION', logoUrl: '/image/lm2.png', inputRequirement: 'id_name', amounts: [
-//                { value: 5.20, label: '💎499+', imageUrl: '/image/prize-2.png' },
-//                { value: 12.00, label: '💎999+', imageUrl: '/image/prize-3.png' },
-//                { value: 20.00, label: '💎1999+25%', imageUrl: '/image/prize-4.png' },
-//                { value: 25.50, label: '💎2499+', imageUrl: '/image/prize-5.png' },
-//                { value: 30.00, label: '💎2999+', imageUrl: '/image/prize-6.png' },SSS
-                { value: 48.50, label: '💎4999+25%', imageUrl: '/image/prize-7.png' },
-                { value: 95.00, label: '💎9999+25%', imageUrl: '/image/icon-happy.png' },
+                { value: 5.20, label: '💎499+cupon', imageUrl: '/image/prize-2.png' },
+                { value: 12.00, label: '💎999+cupon', imageUrl: '/image/prize-3.png' },
+                { value: 20.00, label: '💎1999+cupon', imageUrl: '/image/prize-4.png' },
+                { value: 25.50, label: '💎2499+cupon', imageUrl: '/image/prize-5.png' },
+                { value: 30.00, label: '💎2999+cupon', imageUrl: '/image/prize-6.png' },
+                { value: 48.50, label: '💎4999+cupon', imageUrl: '/image/prize-7.png' },
+                { value: 95.00, label: '💎9999+cupon', imageUrl: '/image/icon-happy.png' },
             ] },
             { name: 'BLOOD STRIKE', logoUrl: '/image/bs.png', inputRequirement: 'id_only', amounts: [
                 { value: 0.89, label: '100+5🧈', imageUrl: '/image/100.png' },
